tests/correctness/resources/miniboxing/tests/compile/gh-bug-185+2-no-plugin.check
newSource1.scala:6: error: use the miniboxing plugin!
    val c = new C[Int]
            ^
newSource1.scala:7: error: use the miniboxing plugin!
    object O extends C[String]
                     ^